--- a/styles/style.css
+++ b/styles/style.css
@@ -17,8 +17,8 @@ a:hover {
 */
 
 
-h1:hover {
-  color:mintcream;  
+/*h1:hover {
+  color:green;  
 }
 
 a:visited {
@@ -44,5 +44,24 @@ footer {
   border: 2px solid magenta;
   border-radius: 25px;
 }
+*/
+
+header img {
+  width: 15rem;
+}
+
+a {
+  text-decoration: none;
+}
+
+nav a {
+  text-decoration: line-through;
+}
+/* more recent takes precedence */
+
+p { color:magenta; }
+p { color: orange; }
+
+  
   
   
